DigicielFull/force-app/main/default/objects/amc__Purchase_Order_Item__c/amc__Purchase_Order_Item__c.object-meta.xml
<CustomObject>
    <description>The Purchase Order Item Custom Object lets you create line items under your Purchase Orders</description>
    <label>Purchase Order Item</label>
    <nameField>
        <displayFormat>POI:{000000}</displayFormat>
        <label>Purchase Order Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>