DigicielFull/force-app/main/default/objects/amc__Purchase_Order_Item__c/fields/amc__Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Amount__c</fullName>
    <formula>amc__Quantity__c *  amc__Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>