DigicielFull/force-app/main/default/objects/amc__Purchase_Order_Item__c/fields/amc__Description__c.field-meta.xml
<CustomField>
    <fullName>amc__Description__c</fullName>
    <description>Identifies the description of the Purchase Order Item</description>
    <inlineHelpText>Identifies the description of the Purchase Order Item</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>