DigicielFull/force-app/main/default/objects/amc__Purchase_Order_Item__c/fields/amc__Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>amc__Purchase_Order__c</fullName>
    <description>Identifies the Purchase Order this Purchase Order Item relates to</description>
    <inlineHelpText>Identifies the Purchase Order this Purchase Order Item relates to</inlineHelpText>
    <label>Purchase Order</label>
    <referenceTo>amc__Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Order Items</relationshipLabel>
    <relationshipName>Purchase_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>