DigicielFull/force-app/main/default/objects/amc__Purchase_Order_Item__c/fields/amc__Quantity__c.field-meta.xml
<CustomField>
    <fullName>amc__Quantity__c</fullName>
    <description>Identifies the number of items required on this Purchase Order Item</description>
    <inlineHelpText>Identifies the number of items required on this Purchase Order Item</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>