DigicielFull/force-app/main/default/objects/amc__Purchase_Order_Item__c/fields/amc__Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>amc__Unit_Price__c</fullName>
    <description>Identifies the unit price for the items required on this Purchase Order Item</description>
    <inlineHelpText>Identifies the unit price for the items required on this Purchase Order Item</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>